tests/requests/invalid/pp_02.py
from gunicorn.http.errors import InvalidProxyLine

cfg.set('proxy_protocol', True)

request = InvalidProxyLine
